Changes from jTDS 0.7.1
========================

03/20/2004 - Brian Heineman
 o Corrected bug [919594] Clob support; added setObject support for both
   java.sql.Blob and java.sql.Clob.  Added initial Blob and Clob functional
   tests.
 o Corrected SQLException in getBytes() due to invalid length calculation.

03/14/2004 - Alin Sinpalean
 o Applied Mike's version 4 of the single connection patch fixing a number of
   issues (see patch #912364 for the exact description).
 o Updated the home page with a lot of new stuff and added it to the CVS
   repository.

03/13/2004 - Alin Sinpalean
 o Applied a patch by jarek_woloszyn fixing the behavior of lastUpdateCount
   when set.
 o Fixed yet another bug (#914069) which prevented cursor-based ResultSets from
   working with PreparedStatements (an update count was returned, which caused
   an exception to be thrown). Updated SAfeTest to test this.
 o Fixed and simplified current row and total row count handling in
   CursorResultSet.

03/08/2004 - Alin Sinpalean
 o Split up table name from TDS_TABNAME packet into catalog, schema and table,
   if fully qualified.
 o Hidden columns (those for which the hidden flag is set in the TDS_COLINFO
   packet) modify the fake column count; they are (hopefully always) the last
   ones in the ResultSet.
 o Updated the details of the TDS_TABNAME and TDS_COLINFO packets in the TDS
   documentation.

03/07/2004 - Alin Sinpalean
 o The main Tds instance is now always created even if no cursor ResultSets are
   used, as it simplifies the internals of TdsConnection and doesn't create an
   additional physical connection anymore.
 o Moved connection initialization from Tds to TdsConnection.
 o Moved the EncodingHelper instance from Tds to TdsConnection.
 o Removed the 'host' URL parameter as it was only duplicating 'serverName'.
 o Replaced direct access to Tds instance 0 with synchronized access to the
   main Tds instance (which now always exists) for database change, commit,