@@ -58,6 +58,10 @@
 <dd>SQL state values with the associated vendor codes (SQL Server-specific error code). Could prove very useful for a correct implementation of exception handling.</dd>
 <dt><a href="http://msdn.microsoft.com/library/default.asp?url=/library/en-us/odbcsql/od_6_015_0tf7.asp">Effects of SQL-92 Options</a></dt>
 <dd>Effects of SQL-92 Options. ODBC and SQL Server.</dd>
+<dt><a href="http://msdn.microsoft.com/library/default.asp?url=/library/en-us/odbc/htm/odappapr.asp">ODBC Reference</a></dt>
+<dd>The ODBC reference from Micosoft.</dd>
+<dt><a href="http://www.contrib.andrew.cmu.edu/~shadow/sql/sql1992.txt">SQL 92 Standard</a></dt>
+<dd>International Standard ISO/IEC 9075:1992, Database Language SQL</dd>
 </dl>
 
 
